	PR c++/54441 	* decl.c (reshape_init_class): Handle invalid initializer for 	0-length array member.

* error.c (dump_type_suffix): Correct handling of 0-length arrays.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@190962 138bc75d-0d04-0410-961f-82ee72b054a4